# humanitas-poc

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml
scripts/: create_metadata_mapping.py  preprocess_datasets.py
src/humanitas_poc/: __init__.py  cli.py  config.py  constants.py  data_logger.py  data_models.py  dataset_loader.py  exceptions.py  feature_extraction.py  fusion.py  normalization.py  quality_assessment.py  template_generator.py  test_fmr_fnmr.py  test_harness.py  test_performance.py  utils.py  zk_circuit.py  zk_prover.py
